// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`swapExecuted > updates an existing swap 1`] = `
{
  "createdAt": Any<Date>,
  "destAsset": "Usdc",
  "fees": [
    {
      "amount": "2117824",
      "asset": "Usdc",
      "type": "NETWORK",
    },
    {
      "amount": "10000",
      "asset": "Usdc",
      "type": "BROKER",
    },
  ],
  "id": Any<BigInt>,
  "intermediateAmount": null,
  "latestSwapRescheduledAt": null,
  "latestSwapRescheduledBlockIndex": null,
  "nativeId": 612n,
  "retryCount": 0,
  "srcAsset": "Flip",
  "swapCanceledAt": null,
  "swapCanceledBlockIndex": null,
  "swapExecutedAt": 2024-08-23T13:14:06.000Z,
  "swapExecutedBlockIndex": "123-0",
  "swapInputAmount": "250000000000000000000",
  "swapOutputAmount": "2115705684",
  "swapRequestId": Any<BigInt>,
  "swapScheduledAt": 2024-08-23T13:14:06.000Z,
  "swapScheduledBlockIndex": "123-456",
  "type": "SWAP",
  "updatedAt": Any<Date>,
}
`;

exports[`swapExecuted > updates an existing swap with intermediate amount 1`] = `
{
  "createdAt": Any<Date>,
  "destAsset": "Sol",
  "fees": [
    {
      "amount": "1975480",
      "asset": "Usdc",
      "type": "NETWORK",
    },
  ],
  "id": Any<BigInt>,
  "intermediateAmount": "1973504362",
  "latestSwapRescheduledAt": null,
  "latestSwapRescheduledBlockIndex": null,
  "nativeId": 641n,
  "retryCount": 0,
  "srcAsset": "Flip",
  "swapCanceledAt": null,
  "swapCanceledBlockIndex": null,
  "swapExecutedAt": 2024-08-23T13:14:06.000Z,
  "swapExecutedBlockIndex": "123-0",
  "swapInputAmount": "250000000000000000000",
  "swapOutputAmount": "21502501808",
  "swapRequestId": Any<BigInt>,
  "swapScheduledAt": 2024-08-23T13:14:06.000Z,
  "swapScheduledBlockIndex": "123-456",
  "type": "SWAP",
  "updatedAt": Any<Date>,
}
`;
